# AltostratusData-reto

./: README.md  aemet-api-key
cloud_run_etl_template-main/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  deploy_utils.bash  main.py  pyproject.toml
cloud_run_etl_template-main/cloud_run_etl_template/: config.py  connector.py  sink.py  source.py
